--- a/app/package.json
+++ b/app/package.json
@@ -37,11 +37,11 @@
     "vee-validate": "^4.13.2",
     "vue": "latest",
     "vue-router": "4",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@prisma/client": "^6.3.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
-    "@prisma/client": "^6.2.1",
     "@tailwindcss/typography": "^0.5.15",
     "@tiptap/core": "^2.8.0",
     "@tiptap/extension-text-style": "^2.8.0",
