--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/i18n": "9.1.3",
     "@nuxtjs/supabase": "1.4.6",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@prisma/client": "^6.3.0",
     "@tanstack/vue-table": "^8.20.5",
     "@tiptap/pm": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
@@ -29,7 +30,7 @@
     "lucide-vue-next": "^0.441.0",
     "luxon": "^3.5.0",
     "maska": "^3.0.3",
-    "nuxt": "^3.15.2",
+    "nuxt": "^3.15.4",
     "radix-vue": "^1.9.5",
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.5.2",
@@ -37,8 +38,7 @@
     "vee-validate": "^4.13.2",
     "vue": "latest",
     "vue-router": "4",
-    "zod": "^3.23.8",
-    "@prisma/client": "^6.3.0"
+    "zod": "^3.23.8"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
