--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/supabase": "1.4.6",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@prisma/client": "^6.3.0",
+    "@scure/bip39": "^1.5.4",
     "@tanstack/vue-table": "^8.20.5",
     "@tiptap/pm": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
