upgrade tailwind/v4 + organizations + prepare resources and qualifications

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ SUPABASE_AUTH_EXTERNAL_KEYCLOAK_CLIENT_ID=
 SUPABASE_AUTH_EXTERNAL_KEYCLOAK_SECRET=
 SUPABASE_AUTH_EXTERNAL_KEYCLOAK_URL= # keycloak url including realm
 SUPABASE_AUTH_EXTERNAL_KEYCLOAK_REDIRECT_URI=
+
+DB_POSTGRES_PASSWORD=
