run prisma commands before starting the app

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,34 +3,24 @@ FROM node:22-alpine as build
 
 WORKDIR /app
 
-COPY package.json ./
-COPY yarn.lock ./
-
+COPY package.json yarn.lock ./
 RUN yarn install
 
 COPY . .
-
 RUN yarn build
 
-# RUN MIGRATIONS
-FROM build as migrate
+# RUN APP (with migrations)
+FROM node:22-alpine as run
 
 WORKDIR /app
 
-COPY . /app
+# Copy everything including .output and node_modules
+COPY --from=build /app /app
 
-CMD ["sh", "-c", "npx prisma migrate deploy"]
-
-# RUN APP
-FROM migrate AS run
-
-COPY --from=build /app/.output /app/.output
-
-EXPOSE 3000
-
-WORKDIR /app/.output
-
+# Prisma needs access to the schema and node_modules
 ENV NUXT_HOST=0.0.0.0
 ENV NUXT_PORT=3000
 
-CMD ["node", "/app/.output/server/index.mjs"]
+EXPOSE 3000
+
+CMD sh -c "npx prisma generate && npx prisma migrate deploy && node .output/server/index.mjs"
