[WIP] restructuring things to make prisma work in production
prisma still not working inside productive docker environment

--- a/compose.cool.yaml
+++ b/compose.cool.yaml
@@ -6,6 +6,8 @@ services:
     logging:
       options:
         max-size: 100m
+    ports:
+      - 3000:3000
     depends_on:
       db:
         condition: service_healthy
